.provarCaches/00D5f000005vwGkEAI/objects/rstk__sormashpcst__c.object
<CustomObject>
    <description>sormashpcst__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__sormashpcst_sormadmd__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  TEXT(rstk__sormashpcst_seq__c)</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>null</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_date__c</fullName>
        <inlineHelpText>This is the transaction date of the RMA shipment</inlineHelpText>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_invdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Inventory Division from which the RMA Line was shipped</inlineHelpText>
        <label>Inventory Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>RMA Shipment Costs</relationshipLabel>
        <relationshipName>sormashpcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_locid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Location ID from which the RMA Line was shipped</inlineHelpText>
        <label>Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>RMA Shipment Costs</relationshipLabel>
        <relationshipName>sormashpcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_locnum__c</fullName>
        <inlineHelpText>This is the Location Number from which the RMA Line was shipped</inlineHelpText>
        <label>Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_loctype__c</fullName>
        <inlineHelpText>This is the Location Type for the location from which the RMA Line was shipped</inlineHelpText>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consigned</fullName>
                </value>
                <value>
                    <fullName>Non-nettable</fullName>
                </value>
                <value>
                    <fullName>On Hand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_lotno__c</fullName>
        <inlineHelpText>This is the Lot Number of the item shipped against this RMA Line</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Project from which the RMA Line was shipped</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>RMA Shipment Costs</relationshipLabel>
        <relationshipName>sormashpcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_seq__c</fullName>
        <inlineHelpText>This is the Sequence number</inlineHelpText>
        <label>Sequence</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Site from which the RMA Line was shipped</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>RMA Shipment Costs</relationshipLabel>
        <relationshipName>sormashpcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_sormadmd__c</fullName>
        <inlineHelpText>This is a reference to the RMA Demand record</inlineHelpText>
        <label>RMA Demand</label>
        <referenceTo>rstk__sormadmd__c</referenceTo>
        <relationshipLabel>RMA Shipment Costs</relationshipLabel>
        <relationshipName>sormashpcsts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_sormadmdcst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is a reference to the RMA Receipt record on which this RMA Line was received.</inlineHelpText>
        <label>RMA Receipt Reference</label>
        <referenceTo>rstk__sormadmdcst__c</referenceTo>
        <relationshipLabel>RMA Shipment Costs</relationshipLabel>
        <relationshipName>sormashpcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_srlno__c</fullName>
        <inlineHelpText>This is the Serial Number of the item shipped against this RMA Line</inlineHelpText>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_txnqty__c</fullName>
        <inlineHelpText>This is the quantity of the RMA shipment</inlineHelpText>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_ucstfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the unit cost for Freight Costs for the item shipped against this RMA Line</inlineHelpText>
        <label>Unit Cost Freight</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_ucstlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Labor Cost of the Product</inlineHelpText>
        <label>Unit Cost Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_ucstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Material Cost of the Product</inlineHelpText>
        <label>Unit Cost Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_ucstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Overhead Fringe Cost of the Product</inlineHelpText>
        <label>Unit Cost OHD Fringe</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_ucstohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Overhead Labor Cost of the Product</inlineHelpText>
        <label>Unit Cost OHD Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_ucstohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Overhead Machine Cost of the Product</inlineHelpText>
        <label>Unit Cost OHD Machine</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_ucstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Overhead Material Cost of the Product</inlineHelpText>
        <label>Unit Cost OHD Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_ucstothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the unit cost for Other Landed Costs for the item shipped against this RMA Line</inlineHelpText>
        <label>Unit Cost Other Landed</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_ucstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Subcontract Labor Cost of the Product</inlineHelpText>
        <label>Unit Cost Sub Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_ucstsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Standard Unit Subcontract Material Cost of the Product</inlineHelpText>
        <label>Unit Cost Sub Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormashpcst_wbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the WBS Number from which the RMA Line was shipped</inlineHelpText>
        <label>WBS</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>RMA Shipment Costs</relationshipLabel>
        <relationshipName>sormashpcsts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>RMA Shipment Cost</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMA Shipment Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>